# Velum-Word

./: .gitignore  README.md
plans/: phase2_development.md
velum_core/: Cargo.toml
velum_core/src/: api.rs  bridge_generated.io.rs  bridge_generated.rs  clipboard.rs  drag_selection.rs  find.rs  footnote_endnote.rs  header_footer.rs  image.rs  ime.rs  keyboard.rs  kinsoku.rs  lib.rs  line_breaking.rs  line_layout.rs  page_layout.rs  piece_tree.rs  selection_render.rs  style.rs  table.rs  task_tracker.rs  text_shaping.rs  toc.rs  undo_redo.rs
velum_core/src/api_layer/: api_facade.rs  document_api.rs  export_api.rs  layout_api.rs  mod.rs  render_api.rs
velum_core/src/export/: mod.rs  pdf.rs
velum_core/src/ooxml/: converter.rs  document.rs  mod.rs  opc.rs  serializer.rs  types.rs
velum_core/velum_ui/: ffi.toml  pubspec.yaml  velum_ui.dart
velum_core/velum_ui/bindings/: README.md  flutter_rust_builder.yaml
velum_core/velum_ui/bindings/lib/: velum_core_bindings.dart
velum_core/velum_ui/services/: document_service.dart  file_service.dart  rendering_service.dart  services.dart
velum_core/velum_ui/view_models/: document_view_model.dart  layout_view_model.dart  selection_view_model.dart  view_models.dart
velum_core/velum_ui/widgets/: cursor_widget.dart  document_view.dart  document_widget.dart  ime_overlay.dart  page_view.dart  selection_overlay.dart  widgets.dart
velum_ui/: README.md  pubspec.yaml
velum_ui/lib/: bridge_generated.dart  main.dart  proto_renderer.dart  status_bar.dart  text_sync_manager.dart  toolbar.dart  velum_core_wrapper.dart
(+7 files in other folders)
