[package]
name = "velum_core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
flutter_rust_bridge = "1.82.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
harfbuzz_rs = "2.0"
once_cell = "1.19"
# Piece Tree and OOXML dependencies will be added later
