[package]
name = "velum_core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
flutter_rust_bridge = "1.82.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
harfbuzz_rs = "2.0"
once_cell = "1.19"
unicode-segmentation = "1.11"
unicode-bidi = "0.3"
# OOXML dependencies
zip = "0.6"
regex = "1.10"
log = "0.4.29"
hyphenation = "0.8.4"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
env_logger = "0.11.8"

